--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,49 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@ant-design/icons": "^4.6.2",
+    "@ckeditor/ckeditor5-build-classic": "^31.0.0",
+    "@ckeditor/ckeditor5-react": "^3.0.3",
+    "@reach/combobox": "^0.16.3",
+    "@reduxjs/toolkit": "^1.6.1",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.16.10",
+    "aos": "^2.3.4",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
+    "formik": "^2.2.9",
+    "gh-pages": "^3.2.3",
+    "html-react-parser": "^1.4.0",
+    "leaflet": "^1.7.1",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-bootstrap": "^2.0.0-beta.6",
+    "react-countup": "^6.0.0",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "react-google-login": "^5.2.2",
+    "react-leaflet": "^2.7.0",
+    "react-loading-overlay-ts": "^0.2.0",
+    "react-map-gl": "^6.1.17",
+    "react-redux": "^7.2.4",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
+    "react-share": "^4.4.0",
+    "react-slick": "^0.28.1",
+    "react-spinners": "^0.11.0",
+    "react-toastify": "^7.0.4",
+    "reactstrap": "^8.9.0",
+    "recharts": "^2.1.5",
+    "redux": "^4.1.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.4",
+    "slick-carousel": "^1.8.1",
+    "use-places-autocomplete": "^1.9.4",
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +70,22 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "@react-google-maps/api": "^2.2.0",
+    "@types/aos": "^3.0.4",
+    "@types/react-router-dom": "^5.1.8",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^4.3.0",
+    "html-webpack-plugin": "^4.5.0",
+    "style-loader": "^1.3.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^3.11.1"
   }
 }
