--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.3",
     "use-places-autocomplete": "^1.9.4",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
